WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310491
[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift bridging header (part 2)
https://bugs.webkit.org/show_bug.cgi?id=310491
Summary
[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift br...
Richard Robinson
Reported
2026-03-22 15:24:04 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-22 15:24:12 PDT
<
rdar://problem/173115129
>
Richard Robinson
Comment 2
2026-03-22 15:25:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61124
EWS
Comment 3
2026-03-23 02:39:53 PDT
Committed
309746@main
(553f822bf6fa): <
https://commits.webkit.org/309746@main
> Reviewed commits have been landed. Closing PR #61124 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug