[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift bridging header (part 2) https://bugs.webkit.org/show_bug.cgi?id=310491 rdar://173115129

Reviewed by Youenn Fablet.

Use an Obj-C interface with a Swift implementation, instead of using PAL's internal Swift generated header
from within WebCore.

* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/module.modulemap:
* Source/WebCore/PAL/pal/system/cocoa/RegexHelper.h: Added.
* Source/WebCore/PAL/pal/system/cocoa/RegexHelper.swift: Renamed from Source/WebCore/PAL/pal/PALSwift/RegexpHelper.swift.
(WebPALRegexHelper.matchPattern(_:value:shouldIgnoreCase:)):
* Source/WebCore/workers/service/ServiceWorkerRoute.mm:
(WebCore::isRegexpMatching):

Canonical link: https://commits.webkit.org/309746@main